# dynaplugz

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE.txt  Makefile  README.md
doc/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt
src/common/: CMakeLists.txt  macros.dynaplugz.in
src/dynaplugz/: CMakeLists.txt  DynaplugzConfig.cmake.in  DynaplugzConfigVersion.cmake.in  config.hpp.in  dynaplugz.cpp  dynaplugz.hpp  dynaplugz.pc.in  pluginloader.cpp  pluginloader.hpp
tests/: CMakeLists.txt
tests/dynaplugz/: CMakeLists.txt  get_instance.cpp
